--- a/foreman/requirements.txt
+++ b/foreman/requirements.txt
@@ -21,7 +21,7 @@ geoparse==2.0.3           # via -r requirements.in
 idna==2.10                # via requests, yarl
 importlib-metadata==4.5.0  # via click
 multidict==5.1.0          # via yarl
-numpy==1.19.5             # via geoparse, pandas
+numpy==1.19.5             # via -r requirements.in, geoparse, pandas, scipy
 pandas==1.1.5             # via geoparse
 psycopg2-binary==2.8.6    # via -r requirements.in
 pyrefinebio==0.3.2        # via -r requirements.in
@@ -31,6 +31,7 @@ pyyaml==5.4.1             # via -r requirements.in, pyrefinebio, vcrpy
 raven==6.10.0             # via -r requirements.in
 requests==2.25.1          # via -r requirements.in, geoparse, pyrefinebio
 retrying==1.3.3           # via -r requirements.in
+scipy==1.5.4              # via -r requirements.in
 six==1.16.0               # via django-elasticsearch-dsl, django-elasticsearch-dsl-drf, elasticsearch-dsl, python-dateutil, retrying, vcrpy
 sqlparse==0.4.1           # via django
 tblib==1.7.0              # via -r requirements.in
