I forgot to include this script before, just noticed it on the prod deploy.

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -608,3 +608,6 @@ jobs:
 
       - name: Deploy
         run: ./.github/scripts/remote_deploy.sh
+
+      - name: Cleanup deploy
+        run: ./.github/scripts/post_deploy_cleanup.sh
