--- a/test_volume/cassettes/surveyor.harmony.sdrf_harmony.yaml
+++ b/test_volume/cassettes/surveyor.harmony.sdrf_harmony.yaml
@@ -9,59 +9,43 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - python-requests/2.24.0
+      - python-requests/2.25.1
     method: GET
     uri: https://www.ebi.ac.uk/arrayexpress/files/E-MTAB-3050/E-MTAB-3050.sdrf.txt
   response:
     body:
-      string: "Source Name\tDescription\tMaterial Type\tCharacteristics[organism]\t\
-        Characteristics[organism part]\tCharacteristics[sex]\tCharacteristics[developmental\
-        \ stage]\tCharacteristics[age]\tUnit [time unit]\tProtocol REF\tProtocol REF\t\
-        Protocol REF\tProtocol REF\tExtract Name\tProtocol REF\tLabeled Extract Name\t\
-        Label\tProtocol REF\tAssay Name\tTechnology Type\tArray Design REF\tProtocol\
-        \ REF\tImage File\tProtocol REF\tArray Data File\tComment [ArrayExpress FTP\
-        \ file]\tProtocol REF\tDerived Array Data File\tComment [Derived ArrayExpress\
-        \ FTP file]\tFactor Value[cell type]\tFactor Value[individual]\tFactor Value[test\
-        \ result]\ndonor A islets\t\uFFFDIslets from 54 years old female at 90% purity.\
-        \ Time from islet preparation to culture initiation: 96 hours. Provided by\
-        \ the University of Miami.\tcell\tHomo sapiens\tislet\tfemale\tadult\t54\t\
-        year\tP-MTAB-41854\t  \t  \tP-MTAB-41858\tdonor A islets RNA\tP-MTAB-41859\t\
-        donor A islets LEX\tbiotin\tP-MTAB-41859\t1007409-C30057\tarray assay\tA-AFFY-1\t\
-        P-MTAB-41860\tC30057.DAT\tP-MTAB-41861\tC30057.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\t\
-        P-MTAB-41862\tC30057.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\t\
-        freshly isolated\tA\tNA\ndonor A islets\t\uFFFDIslets from 54 years old female\
-        \ at 90% purity. Time from islet preparation to culture initiation: 96 hours.\
-        \ Provided by the University of Miami.\tcell\tHomo sapiens\tislet\tfemale\t\
-        adult\t54\tyear\tP-MTAB-41854\tP-MTAB-41855\t  \tP-MTAB-41858\tdonor A expanded\
-        \ cells RNA\tP-MTAB-41859\tdonor A expanded cells LEX\tbiotin\tP-MTAB-41859\t\
-        1007409-C30058\tarray assay\tA-AFFY-1\tP-MTAB-41860\tC30058.DAT\tP-MTAB-41861\t\
-        C30058.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\t\
-        P-MTAB-41862\tC30058.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\t\
-        expanded\tA\tNA\ndonor A islets\t\uFFFDIslets from 54 years old female at\
-        \ 90% purity. Time from islet preparation to culture initiation: 96 hours.\
-        \ Provided by the University of Miami.\tcell\tHomo sapiens\tislet\tfemale\t\
-        adult\t54\tyear\tP-MTAB-41854\tP-MTAB-41855\tP-MTAB-41856\tP-MTAB-41858\t\
-        donor A differentiated cells RNA\tP-MTAB-41859\tdonor A differentiated cells\
-        \ LEX\tbiotin\tP-MTAB-41859\t1009003-C30059\tarray assay\tA-AFFY-1\tP-MTAB-41860\t\
-        C30059.DAT\tP-MTAB-41861\tC30059.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\t\
-        P-MTAB-41862\tC30059.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\t\
-        differentiated\tA\tsuccessful\ndonor B islets\tIslets from 38 years old male.\
-        \ Time from islet preparation to culture initiation: 96 hours. Provided by\
-        \ the North West Tissue Center Seattle.\tcell\tHomo sapiens\tislet\tmale\t\
-        adult\t38\tyear\tP-MTAB-41854\tP-MTAB-41855\t  \tP-MTAB-41858\tdonor B expanded\
-        \ cells RNA\tP-MTAB-41859\tdonor B expanded cells LEX\tbiotin\tP-MTAB-41859\t\
-        1009003-C30060\tarray assay\tA-AFFY-1\tP-MTAB-41860\tC30060.DAT\tP-MTAB-41861\t\
-        C30060.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\t\
-        P-MTAB-41862\tC30060.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\t\
-        expanded\tB\tNA\ndonor B islets\tIslets from 38 years old male. Time from\
-        \ islet preparation to culture initiation: 96 hours. Provided by the North\
-        \ West Tissue Center Seattle.\tcell\tHomo sapiens\tislet\tmale\tadult\t38\t\
-        year\tP-MTAB-41854\tP-MTAB-41855\tP-MTAB-41856\tP-MTAB-41858\tdonor B differentiated\
-        \ cells RNA\tP-MTAB-41859\tdonor B differentiated cells LEX\tbiotin\tP-MTAB-41859\t\
-        1009003-C30061\tarray assay\tA-AFFY-1\tP-MTAB-41860\tC30061.DAT\tP-MTAB-41861\t\
-        C30061.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\t\
-        P-MTAB-41862\tC30061.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\t\
-        differentiated\tB\tunsuccessful\n"
+      string: "Source Name\tDescription\tMaterial Type\tCharacteristics[organism]\tCharacteristics[organism
+        part]\tCharacteristics[sex]\tCharacteristics[developmental stage]\tCharacteristics[age]\tUnit
+        [time unit]\tProtocol REF\tProtocol REF\tProtocol REF\tProtocol REF\tExtract
+        Name\tProtocol REF\tLabeled Extract Name\tLabel\tProtocol REF\tAssay Name\tTechnology
+        Type\tArray Design REF\tProtocol REF\tImage File\tProtocol REF\tArray Data
+        File\tComment [ArrayExpress FTP file]\tProtocol REF\tDerived Array Data File\tComment
+        [Derived ArrayExpress FTP file]\tFactor Value[cell type]\tFactor Value[individual]\tFactor
+        Value[test result]\ndonor A islets\t\uFFFDIslets from 54 years old female
+        at 90% purity. Time from islet preparation to culture initiation: 96 hours.
+        Provided by the University of Miami.\tcell\tHomo sapiens\tislet\tfemale\tadult\t54\tyear\tP-MTAB-41854\t
+        \ \t  \tP-MTAB-41858\tdonor A islets RNA\tP-MTAB-41859\tdonor A islets LEX\tbiotin\tP-MTAB-41859\t1007409-C30057\tarray
+        assay\tA-AFFY-1\tP-MTAB-41860\tC30057.DAT\tP-MTAB-41861\tC30057.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\tP-MTAB-41862\tC30057.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\tfreshly
+        isolated\tA\tNA\ndonor A islets\t\uFFFDIslets from 54 years old female at
+        90% purity. Time from islet preparation to culture initiation: 96 hours. Provided
+        by the University of Miami.\tcell\tHomo sapiens\tislet\tfemale\tadult\t54\tyear\tP-MTAB-41854\tP-MTAB-41855\t
+        \ \tP-MTAB-41858\tdonor A expanded cells RNA\tP-MTAB-41859\tdonor A expanded
+        cells LEX\tbiotin\tP-MTAB-41859\t1007409-C30058\tarray assay\tA-AFFY-1\tP-MTAB-41860\tC30058.DAT\tP-MTAB-41861\tC30058.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\tP-MTAB-41862\tC30058.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\texpanded\tA\tNA\ndonor
+        A islets\t\uFFFDIslets from 54 years old female at 90% purity. Time from islet
+        preparation to culture initiation: 96 hours. Provided by the University of
+        Miami.\tcell\tHomo sapiens\tislet\tfemale\tadult\t54\tyear\tP-MTAB-41854\tP-MTAB-41855\tP-MTAB-41856\tP-MTAB-41858\tdonor
+        A differentiated cells RNA\tP-MTAB-41859\tdonor A differentiated cells LEX\tbiotin\tP-MTAB-41859\t1009003-C30059\tarray
+        assay\tA-AFFY-1\tP-MTAB-41860\tC30059.DAT\tP-MTAB-41861\tC30059.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\tP-MTAB-41862\tC30059.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\tdifferentiated\tA\tsuccessful\ndonor
+        B islets\tIslets from 38 years old male. Time from islet preparation to culture
+        initiation: 96 hours. Provided by the North West Tissue Center Seattle.\tcell\tHomo
+        sapiens\tislet\tmale\tadult\t38\tyear\tP-MTAB-41854\tP-MTAB-41855\t  \tP-MTAB-41858\tdonor
+        B expanded cells RNA\tP-MTAB-41859\tdonor B expanded cells LEX\tbiotin\tP-MTAB-41859\t1009003-C30060\tarray
+        assay\tA-AFFY-1\tP-MTAB-41860\tC30060.DAT\tP-MTAB-41861\tC30060.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\tP-MTAB-41862\tC30060.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\texpanded\tB\tNA\ndonor
+        B islets\tIslets from 38 years old male. Time from islet preparation to culture
+        initiation: 96 hours. Provided by the North West Tissue Center Seattle.\tcell\tHomo
+        sapiens\tislet\tmale\tadult\t38\tyear\tP-MTAB-41854\tP-MTAB-41855\tP-MTAB-41856\tP-MTAB-41858\tdonor
+        B differentiated cells RNA\tP-MTAB-41859\tdonor B differentiated cells LEX\tbiotin\tP-MTAB-41859\t1009003-C30061\tarray
+        assay\tA-AFFY-1\tP-MTAB-41860\tC30061.DAT\tP-MTAB-41861\tC30061.CEL\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.raw.1.zip\tP-MTAB-41862\tC30061.txt\tftp://ftp.ebi.ac.uk/pub/databases/microarray/data/experiment/MTAB/E-MTAB-3050/E-MTAB-3050.processed.1.zip\tdifferentiated\tB\tunsuccessful\n"
     headers:
       Accept-Ranges:
       - bytes
@@ -72,7 +56,7 @@ interactions:
       Content-Type:
       - text/plain
       Date:
-      - Mon, 03 May 2021 16:43:52 GMT
+      - Wed, 28 Jul 2021 19:40:02 GMT
       ETag:
       - E-MTAB-3050.sdrf.txt_3955_1414664139000
       Last-Modified:
