--- a/workers/data_refinery_workers/processors/requirements.in
+++ b/workers/data_refinery_workers/processors/requirements.in
@@ -10,6 +10,7 @@ retrying
 psutil>=5.6.6
 Jinja2>=2.10.1
 Pillow>=7.1.0
+tzlocal>=2.1
 # Fancyimpute needs this version.
 scikit-learn>=0.21.2
 scipy
