Update rpy2 everywhere else to fix version incompatibilities

--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -79,7 +79,7 @@ ENV LANG C.UTF-8
 RUN pip3 install --upgrade pip
 
 # Smasher-specific requirements
-RUN pip3 install numpy scipy matplotlib pandas==0.25.3 scikit-learn sympy nose rpy2===2.9.5 tzlocal
+RUN pip3 install numpy scipy matplotlib pandas==0.25.3 scikit-learn sympy nose rpy2==3.4.5 tzlocal
 # End smasher-specific
 
 # Some combination of pip and setuptools versions makes this bug appear:
