--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,5 @@ infrastructure/
 terraform/
 */batch-job-specs
 config/externally_supplied_metadata/metasra/*.sqlite
+config/externally_supplied_metadata/metasra/metasra_translated.json
+config/externally_supplied_metadata/metasra/metasra_keywords.json
