--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ workers/test_volume/*
 # processing the metadata from MetaSRA, which are ~24GB we don't need to track
 config/externally_supplied_metadata/metasra/metasra.v*.json
 config/externally_supplied_metadata/metasra/*.sqlite
+config/externally_supplied_metadata/metasra/metasra_translated.json
+config/externally_supplied_metadata/metasra/metasra_keywords.json
 
 
 # Byte-compiled / optimized / DLL files
