--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,9 @@ workers/test_volume/*
 # We download the entire SRAmetadb database and MetaSRA json file while
 # processing the metadata from MetaSRA, which are ~24GB we don't need to track
 config/externally_supplied_metadata/metasra/metasra.v*.json
-config/externally_supplied_metadata/metasra/*.sqlite
 config/externally_supplied_metadata/metasra/metasra_translated.json
 config/externally_supplied_metadata/metasra/metasra_keywords.json
+config/externally_supplied_metadata/metasra/*.tab
 
 
 # Byte-compiled / optimized / DLL files
