--- a/foreman/dockerfiles/Dockerfile.foreman
+++ b/foreman/dockerfiles/Dockerfile.foreman
@@ -8,6 +8,8 @@ RUN apt-get -y install apt-fast
 
 RUN apt-fast update -qq && \
     apt-fast install -y \
+    gcc \
+    libpq-dev \
     python3 \
     python3-pip
 
