Move all tests to `tests` directory. Extract testing env settings into a separate file (tests/settings.py). Add setup.cfg to the Docker container for coverate.report settings. Update `test_all_endpoints` test to use current job IDs instead of hardcoded '1'.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,26 @@
+[coverage:report]
+include =
+    data_refinery_api/*
+omit =
+    data_refinery_api/wsgi.py
+
 [pep8]
-max-line-length: 100
+max-line-length = 100
 
 [flake8]
-max-line-length: 100
 ignore = E203
+max-line-length = 100
 
 [isort]
 # Settings for compatibility with black.
-line_length = 100
-use_parentheses = True
-multi_line_output = 3
-include_trailing_comma = True
-combine_as_imports = True
-known_django=django, rest_framework
-known_first_party=data_refinery_api,data_refinery_common,data_refinery_foreman,data_refinery_workers
-default_section=THIRDPARTY
-sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+combine_as_imports = true
 combine_star = true
+default_section = THIRDPARTY
+include_trailing_comma = true
+known_django = django,rest_framework
+known_first_party = data_refinery_api,data_refinery_common,data_refinery_foreman,data_refinery_workers
 length_sort = false
+line_length = 100
+multi_line_output = 3
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+use_parentheses = true
