--- a/api/dockerfiles/Dockerfile.api_local
+++ b/api/dockerfiles/Dockerfile.api_local
@@ -22,6 +22,7 @@ RUN pip install \
     common/$(ls common -1 | sort --version-sort | tail -1)
 
 COPY api/ .
+COPY setup.cfg .
 
 ARG SYSTEM_VERSION
 
