Update workers Docker images:   - Optimize and reorder building instructions.   - Update Python to v3.8.   - Resolve OS level package dependency conflicts.   - Add and set up missing OS packages.   - Add apt cache clean up instructions.   - Use `--ignore-installed` pip flag for better deps management.   -

--- a/workers/dockerfiles/Dockerfile.affymetrix
+++ b/workers/dockerfiles/Dockerfile.affymetrix
@@ -1,45 +1,51 @@
 FROM ubuntu:20.04
 
-RUN apt-get update -qq
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:apt-fast/stable
-RUN apt-get update -qq
-RUN apt-get -y install apt-fast
+# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
+# For whatever reason this worked and 'en_US.UTF-8' did not.
+ENV LANG C.UTF-8
 
 # Prevent tzdata from prompting us for a timezone and hanging the build.
 ENV DEBIAN_FRONTEND=noninteractive
 
-# The packages related to R are somewhat weird, see the README for more details.
+RUN apt-get update -qq
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:apt-fast/stable
 
+RUN apt-get update -qq
+RUN apt-get install -y apt-fast apt-transport-https
+
+# The packages related to R are somewhat weird, see the README for more details.
 COPY workers/CRAN.gpg .
-RUN \
-  apt-fast update -qq && \
-  apt-get install -y apt-transport-https && \
-  apt-fast install -y lsb-release && \
-  echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/" \
-      >> /etc/apt/sources.list.d/added_repos.list && \
-  apt-key add CRAN.gpg && \
-  apt-fast update -qq && \
-  apt-fast install -y \
+RUN apt-key add CRAN.gpg
+RUN echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/" \
+      >> /etc/apt/sources.list.d/added_repos.list
+
+RUN apt-fast update -qq && apt-fast install -y \
+  build-essential \
+  cmake \
+  curl \
+  cython3 \
   ed \
   git \
-  mercurial \
   libcairo-dev \
+  libcurl4-openssl-dev \
   libedit-dev \
+  libpq-dev \
+  libssl-dev \
+  libxml2-dev \
+  llvm-10-dev \
   lsb-release \
-  python3 \
+  mercurial \
+  pkg-config \
   python3-pip \
+  python3 \
   python3-dev \
   r-base-core \
-  r-base-dev \
-  libpq-dev \
-  libxml2-dev \
-  libssl-dev \
-  libcurl4-openssl-dev \
-  curl \
-  wget && \
-  rm -rf /var/lib/apt/lists/*
+  wget
+
 RUN rm CRAN.gpg
+RUN apt-get clean; rm -rf /var/lib/apt/lists/*
+RUN ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config
 
 RUN groupadd user && useradd --create-home --home-dir /home/user -g user user
 WORKDIR /home/user
@@ -47,41 +53,29 @@ WORKDIR /home/user
 ENV R_LIBS "/usr/local/lib/R/site-library"
 
 COPY common/install_devtools.R .
-
 RUN Rscript install_devtools.R
 
 COPY workers/R_dependencies/affymetrix/dependencies.R .
 RUN Rscript dependencies.R
 
 COPY workers/affymetrix_dependencies.R .
-COPY workers/install_ensg_pkgs.R .
-
 RUN Rscript affymetrix_dependencies.R
 
-# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
-# For whatever reason this worked and 'en_US.UTF-8' did not.
-ENV LANG C.UTF-8
-
 RUN pip3 install pip --upgrade
-
-RUN pip3 install setuptools --upgrade && \
-  rm -rf /root/.cache
-
-COPY config/ config/
-COPY .boto .boto
-
-COPY common/dist/data-refinery-common-* common/
-
-# Get the latest version from the dist directory.
-RUN pip3 install common/$(ls common -1 | sort --version-sort | tail -1)
-
-COPY workers/data_refinery_workers/processors/requirements.txt .
-
-RUN pip3 install -r requirements.txt
+RUN pip3 install setuptools --upgrade
 
 # Install this one here instead of via requirements.txt because not
 # all processors need it.
 RUN pip3 install rpy2==3.4.5
+COPY workers/data_refinery_workers/processors/requirements.txt .
+RUN pip3 install -r requirements.txt
+
+# Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
+RUN pip3 install common/$(ls common -1 | sort --version-sort | tail -1)
+
+# Clear out the pip3 cache.
+RUN rm -rf /root/.cache
 
 ARG SYSTEM_VERSION
 
@@ -89,6 +83,9 @@ ENV SYSTEM_VERSION $SYSTEM_VERSION
 
 USER user
 
+COPY .boto .boto
+COPY config/ config/
 COPY workers/ .
+COPY workers/install_ensg_pkgs.R .
 
 ENTRYPOINT []
