--- a/workers/dockerfiles/Dockerfile.salmon
+++ b/workers/dockerfiles/Dockerfile.salmon
@@ -1,44 +1,54 @@
 FROM ubuntu:18.04
 
-RUN apt-get update -qq
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:apt-fast/stable
-RUN apt-get update -qq
-RUN apt-get -y install apt-fast
-
 # Prevent tzdata from prompting us for a timezone and hanging the build.
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
+# For whatever reason this worked and 'en_US.UTF-8' did not.
+ENV LANG C.UTF-8
+
+RUN apt-get update
+RUN apt-get install -y software-properties-common
+RUN add-apt-repository ppa:apt-fast/stable
+RUN add-apt-repository ppa:deadsnakes/ppa
+RUN add-apt-repository ppa:savoury1/llvm-defaults-10
+
+RUN apt-get update -qq
+RUN apt-get install -y apt-fast apt-transport-https
+
 # The packages related to R are somewhat weird, see the README for more details.
-
 COPY workers/CRAN.gpg .
+RUN apt-key add CRAN.gpg
+RUN echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/" \
+      >> /etc/apt/sources.list.d/added_repos.list
 
-RUN \
-  apt-fast update -qq && \
-  apt-get install -y apt-transport-https && \
-  apt-fast install -y lsb-release && \
-  echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/" \
-      >> /etc/apt/sources.list.d/added_repos.list && \
-  apt-key add CRAN.gpg && \
-  apt-fast update -qq && \
-  apt-fast install -y \
+RUN apt-fast update -qq && apt-fast install -y \
+  build-essential \
+  cmake \
+  curl \
+  cython3 \
   ed \
   git \
-  mercurial \
   libcairo-dev \
-  libedit-dev \
-  lsb-release \
-  python3 \
-  python3-pip \
-  libxml2-dev \
-  cmake \
-  r-base-core \
-  libssl-dev \
   libcurl4-openssl-dev \
-  curl \
-  wget && \
-  rm -rf /var/lib/apt/lists/*
+  libedit-dev \
+  libpq-dev \
+  libssl-dev \
+  libxml2-dev \
+  llvm-10-dev \
+  lsb-release \
+  mercurial \
+  pkg-config \
+  python3-pip \
+  python3.8 \
+  python3.8-dev \
+  r-base-core \
+  wget
+
 RUN rm CRAN.gpg
+RUN apt-get upgrade; apt-get clean; rm -rf /var/lib/apt/lists/*
+RUN ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config
+RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1
 
 RUN groupadd user && useradd --create-home --home-dir /home/user -g user user
 WORKDIR /home/user
@@ -60,44 +70,40 @@ RUN ln -sf `pwd`/Salmon-${SALMON_VERSION}_linux_x86_64/bin/salmon /usr/local/bin
 RUN rm -f Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz
 # End Salmon installation.
 
-# Install R dependencies
+# Install R dependencies.
 COPY common/install_devtools.R .
 RUN Rscript install_devtools.R
+
 COPY workers/R_dependencies/tximport/dependencies.R tximport_dependencies.R
 RUN Rscript tximport_dependencies.R
 
-# Install tximport
+# Install tximport.
 COPY workers/install_tximport.R .
 RUN Rscript install_tximport.R
 
-# Install SalmonTools
+RUN pip3 install --upgrade pip
+RUN pip3 install numpy
+
+COPY workers/data_refinery_workers/processors/requirements.txt .
+RUN pip3 install --ignore-installed -r requirements.txt
+
+# Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
+RUN pip3 install common/$(ls common -1 | sort --version-sort | tail -1)
+
+# Install SalmonTools.
 RUN git clone https://github.com/COMBINE-lab/SalmonTools.git && cd SalmonTools && git checkout 3e6654c2c10a5225498b623056993947fa688afc
 RUN cd SalmonTools && cmake . -DCMAKE_INSTALL_PREFIX=/usr/local && make install
 RUN rm -rf SalmonTools
 
-# Install sra-tools
+# Install sra-tools.
 ENV SRA_VERSION 2.9.1
-RUN wget "http://ftp-trace.ncbi.nlm.nih.gov/sra/sdk/${SRA_VERSION}/sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
+RUN wget "https://ftp.ncbi.nlm.nih.gov/sra/sdk/${SRA_VERSION}/sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
     tar zxfv sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz && \
     cp -r sratoolkit.${SRA_VERSION}-ubuntu64/bin/* /usr/bin
 
-# Source: https://github.com/thisbejim/Pyrebase/issues/87#issuecomment-354452082
-# For whatever reason this worked and 'en_US.UTF-8' did not.
-ENV LANG C.UTF-8
-
-RUN pip3 install --upgrade pip
-
-COPY config/ config/
-COPY .boto .boto
-
-COPY workers/data_refinery_workers/processors/requirements.txt .
-
-RUN pip3 install -r requirements.txt
-
-COPY common/dist/data-refinery-common-* common/
-
-# Get the latest version from the dist directory.
-RUN pip3 install common/$(ls common -1 | sort --version-sort | tail -1)
+# Clear out the pip3 cache.
+RUN rm -rf /root/.cache
 
 ARG SYSTEM_VERSION
 
@@ -105,6 +111,8 @@ ENV SYSTEM_VERSION $SYSTEM_VERSION
 
 USER user
 
+COPY .boto .boto
+COPY config/ config/
 COPY workers/ .
 
 ENTRYPOINT []
