--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -1,12 +1,10 @@
-FROM nvidia/cuda:11.8.0-runtime-ubuntu18.04
-
 # This is very similar to the `smasher` image, but comes with OpenBLAS and some
 # of the other libraries required for fancyimpute.
 
+FROM nvidia/cuda:11.8.0-runtime-ubuntu18.04
+
 # Fail in case of an error at any stage in the pipe.
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-
-WORKDIR /home/user
 
 # Prevent tzdata from prompting us for a timezone and hanging the build.
 ENV DEBIAN_FRONTEND=noninteractive
@@ -33,45 +31,52 @@ RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
     apt-get install --no-install-recommends -y apt-fast apt-transport-https gpg-agent tzdata && \
     apt-key add CRAN.gpg && \
     echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran35/" \
-      >> /etc/apt/sources.list.d/added_repos.list && \
+        >> /etc/apt/sources.list.d/added_repos.list && \
     apt-fast update -qq && \
     apt-fast install -y \
-      build-essential \
-      ccache \
-      cmake \
-      curl \
-      cython3 \
-      ed \
-      gfortran \
-      git \
-      libblas-dev \
-      libcairo-dev \
-      libcurl4-openssl-dev \
-      libedit-dev \
-      liblapack-dev \
-      libpq-dev \
-      libssl-dev \
-      libxml2-dev \
-      llvm-10-dev \
-      lsb-release \
-      mercurial \
-      pkg-config \
-      python3-pip \
-      python3.8 \
-      python3.8-dev \
-      r-base-core \
-      wget && \
+        build-essential \
+        ccache \
+        cmake \
+        curl \
+        cython3 \
+        ed \
+        gfortran \
+        git \
+        libblas-dev \
+        libcairo-dev \
+        libcurl4-openssl-dev \
+        libedit-dev \
+        liblapack-dev \
+        libpq-dev \
+        libssl-dev \
+        libxml2-dev \
+        llvm-10-dev \
+        lsb-release \
+        mercurial \
+        pkg-config \
+        python3-pip \
+        python3.8 \
+        python3.8-dev \
+        r-base-core \
+        wget && \
+    apt-get clean && \
     rm CRAN.gpg && \
-    apt-get clean; rm -rf /var/lib/apt/lists/* && \
-    ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config & \
-    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.8 1 && \
-    groupadd user && useradd --create-home --home-dir /home/user -g user user && \
-    wget -q https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 && \
+    rm -rf /var/lib/apt/lists/* && \
+    ln -s /usr/bin/llvm-config-10 /usr/bin/llvm-config && \
+    update-alternatives --install /usr/bin/python3 python3 \
+        /usr/bin/python3.8 1 && \
+    groupadd user && \
+    useradd --create-home --home-dir /home/user -g user user
+
+WORKDIR /home/user
+RUN wget -q https://bitbucket.org/ariya/phantomjs/downloads/\
+phantomjs-2.1.1-linux-x86_64.tar.bz2 && \
     tar xvjf phantomjs-2.1.1-linux-x86_64.tar.bz2 -C /usr/local/share/ && \
-    ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs /usr/local/bin/
+    ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs \
+        /usr/local/bin/
 
 # We need a few special packages for QN.
-ENV R_LIBS="/usr/local/lib/R/site-library"
+ENV R_LIBS=/usr/local/lib/R/site-library
 
 COPY common/R/install_devtools.R .
 RUN Rscript install_devtools.R
@@ -83,22 +88,23 @@ COPY workers/R/dependencies/qn/bioc/dependencies.R .
 RUN Rscript dependencies.R
 # End QN-specific
 
-# Get the latest version from the dist directory.
-COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed --no-cache-dir \
-    common/$(ls common -1 | sort --version-sort | tail -1)
-
-RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
-    pip3 install --ignore-installed --no-cache-dir numpy scipy matplotlib \
-      pandas==0.25.3 scikit-learn sympy nose rpy2===3.4.5 tzlocal fancySVD
+RUN pip3 install --ignore-installed --upgrade pip && \
+    pip3 install --ignore-installed numpy scipy matplotlib \
+        pandas==0.25.3 scikit-learn sympy nose rpy2===3.4.5 tzlocal fancySVD
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt  && \
-    pip3 install --ignore-installed --no-cache-dir numpy==1.16.0
+RUN pip3 install --ignore-installed -r requirements.txt && \
+    # Pin setuptools as a workaround for
+    # https://github.com/pypa/setuptools/issues/3693
+    pip3 install --ignore-installed setuptools==65.0.1 numpy==1.16.0
+
+# Get the latest version from the dist directory.
+COPY common/dist/data-refinery-common-* common/
+RUN pip3 install --ignore-installed \
+    common/$(ls common -1 | sort --version-sort | tail -1)
 
 ARG SYSTEM_VERSION
-
-ENV SYSTEM_VERSION $SYSTEM_VERSION
+ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
 
