--- a/workers/dockerfiles/Dockerfile.no_op
+++ b/workers/dockerfiles/Dockerfile.no_op
@@ -14,29 +14,30 @@ RUN Rscript install_gene_convert.R
 # Noop-specific.
 RUN mkdir -p gene_indexes
 WORKDIR /home/user/gene_indexes
-ENV ID_REFINERY_URL https://zenodo.org/record/1410647/files/all_1536267482.zip
+ENV ID_REFINERY_URL=https://zenodo.org/record/1410647/files/all_1536267482.zip
 RUN curl -O $ID_REFINERY_URL && \
     echo $ID_REFINERY_URL > /etc/identifier_refinery_url && \
     unzip *.zip && \
     rm *.zip
 # End Noop-specific.
 
-WORKDIR /home/user
-
-RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
-    pip3 install --ignore-installed --no-cache-dir numpy
-
-COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
+WORKDIR /home/user/
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed --no-cache-dir \
+RUN pip3 install --ignore-installed \
     common/$(ls common -1 | sort --version-sort | tail -1)
 
-ARG SYSTEM_VERSION
+RUN pip3 install --ignore-installed --upgrade pip && \
+    pip3 install --ignore-installed numpy
 
-ENV SYSTEM_VERSION $SYSTEM_VERSION
+COPY workers/data_refinery_workers/processors/requirements.txt .
+RUN pip3 install --ignore-installed -r requirements.txt && \
+    # Clear out the pip3 cache.
+    rm -r /root/.cache
+
+ARG SYSTEM_VERSION
+ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
 
