--- a/workers/dockerfiles/Dockerfile.salmon
+++ b/workers/dockerfiles/Dockerfile.salmon
@@ -10,11 +10,13 @@ WORKDIR /home/user
 # Salmon to work https://github.com/AlexsLemonade/refinebio/issues/1496.
 # This is something that should be considered when updating salmon, because
 # all samples from incomplete experiments must have salmon run on them again.
-ENV SALMON_VERSION 0.13.1
+ENV SALMON_VERSION=0.13.1
 
-# On version 0.13.1 salmon was being extracted to a folder with an all lowercase name
-# the options `-C` and `--strip-components` allow us to specify the name for the resulting file
-RUN wget -q "https://github.com/COMBINE-lab/salmon/releases/download/v${SALMON_VERSION}/Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz" && \
+# On version 0.13.1 salmon was being extracted to a folder with an all
+# lowercase name the options `-C` and `--strip-components` allow us to specify
+#the name for the resulting file.
+RUN wget -q "https://github.com/COMBINE-lab/salmon/releases/download/\
+v${SALMON_VERSION}/Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz" && \
     mkdir "Salmon-${SALMON_VERSION}_linux_x86_64" && \
     tar -xzf "Salmon-${SALMON_VERSION}_linux_x86_64.tar.gz" \
         -C "Salmon-${SALMON_VERSION}_linux_x86_64" --strip-components 1 && \
@@ -30,16 +32,18 @@ RUN Rscript tximport_dependencies.R
 COPY workers/R/dependencies/tximport/install_tximport.R .
 RUN Rscript install_tximport.R
 
-RUN pip3 install --ignore-installed --no-cache-dir --upgrade pip && \
-    pip3 install --ignore-installed --no-cache-dir numpy
+RUN pip3 install --ignore-installed --upgrade pip && \
+    pip3 install --ignore-installed numpy
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
-RUN pip3 install --ignore-installed --no-cache-dir \
+RUN pip3 install --ignore-installed \
     common/$(ls common -1 | sort --version-sort | tail -1)
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
-RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
+RUN pip3 install --ignore-installed -r requirements.txt && \
+    # Clear out the pip3 cache.
+    rm -r /root/.cache
 
 # Install SalmonTools.
 RUN git clone https://github.com/COMBINE-lab/SalmonTools.git && \
@@ -50,14 +54,14 @@ RUN git clone https://github.com/COMBINE-lab/SalmonTools.git && \
     rm -rf SalmonTools
 
 # Install sra-tools.
-ENV SRA_VERSION 2.9.1
-RUN wget -q "https://ftp.ncbi.nlm.nih.gov/sra/sdk/${SRA_VERSION}/sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
+ENV SRA_VERSION=2.9.1
+RUN wget -q "https://ftp.ncbi.nlm.nih.gov/sra/sdk/${SRA_VERSION}/\
+sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
     tar zxfv "sratoolkit.${SRA_VERSION}-ubuntu64.tar.gz" && \
     cp -r "sratoolkit.${SRA_VERSION}-ubuntu64/bin/"* /usr/bin
 
 ARG SYSTEM_VERSION
-
-ENV SYSTEM_VERSION $SYSTEM_VERSION
+ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
 
