--- a/workers/dockerfiles/Dockerfile.compendia
+++ b/workers/dockerfiles/Dockerfile.compendia
@@ -69,8 +69,8 @@ RUN echo debconf apt-fast/maxdownloads string 16 | debconf-set-selections && \
     useradd --create-home --home-dir /home/user -g user user
 
 WORKDIR /home/user
-RUN wget -q https://bitbucket.org/ariya/phantomjs/downloads/\
-phantomjs-2.1.1-linux-x86_64.tar.bz2 && \
+RUN wget "https://bitbucket.org/ariya/phantomjs/downloads/\
+phantomjs-2.1.1-linux-x86_64.tar.bz2" && \
     tar xvjf phantomjs-2.1.1-linux-x86_64.tar.bz2 -C /usr/local/share/ && \
     ln -s /usr/local/share/phantomjs-2.1.1-linux-x86_64/bin/phantomjs \
         /usr/local/bin/
@@ -94,9 +94,7 @@ RUN pip3 install --ignore-installed --upgrade pip && \
 
 COPY workers/data_refinery_workers/processors/requirements.txt .
 RUN pip3 install --ignore-installed -r requirements.txt && \
-    # Pin setuptools as a workaround for
-    # https://github.com/pypa/setuptools/issues/3693
-    pip3 install --ignore-installed setuptools==65.0.1 numpy==1.16.0
+    pip3 install --ignore-installed numpy==1.16.0
 
 # Get the latest version from the dist directory.
 COPY common/dist/data-refinery-common-* common/
